# tishcode

./: .dockerignore  .env.docker-example  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.cli  README.md  docker-compose.yml  main.py  pyproject.toml  server.py
landing/: index.html  style.css
src/: agent_utils.py  code_agent.py  db.py  file_tools.py  git_utils.py  github_utils.py  handlers.py  logger.py  review_agent.py
